# M8-lang

./: .gitignore  CMakeLists.txt  CMakePresets.json  M8-lang.ebnf  README.md  ai_usage.txt  ai_usage_2.txt  ai_usage_3.txt  example.m8  test_logical_ops.m8
scripts/: run_e2e_test.py
src/: ASTNode.hpp  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  Lexer.cpp  Lexer.hpp  M8-lang.cpp  M8-lang.hpp  Semantics.cpp  Semantics.hpp  SyntaxParser.cpp  SyntaxParser.hpp  Token.hpp  Utility.hpp
src/AST/: AST.hpp  ASTCloner.cpp  ASTCloner.hpp  ASTFwd.hpp  ASTNode.cpp  ASTNode.hpp  ASTVisitor.hpp  AssignFieldNode.cpp  AssignFieldNode.hpp  AssignNode.cpp  AssignNode.hpp  BinaryOpNode.cpp  BinaryOpNode.hpp  BlockNode.cpp  BlockNode.hpp  BoolLiteralNode.cpp  BoolLiteralNode.hpp  DeclNode.cpp  DeclNode.hpp  ExprNode.cpp  ExprNode.hpp  ExprStmtNode.cpp  ExprStmtNode.hpp  FactorNode.cpp  FactorNode.hpp  FieldAccessNode.cpp  FieldAccessNode.hpp  FunctionCallNode.cpp  FunctionCallNode.hpp  FunctionNode.cpp  FunctionNode.hpp  IDNode.cpp  IDNode.hpp  IfNode.cpp  IfNode.hpp  MemberFunctionCallNode.cpp  MemberFunctionCallNode.hpp  NumberNode.cpp  NumberNode.hpp  ProgramNode.cpp  (+14 more)
src/CodeGen/: CodeGen.cpp  CodeGen.hpp
src/Compiler/: M8-lang.cpp  M8-lang.hpp  Optimizer.cpp  Optimizer.hpp
src/General/: Token.hpp  Utility.hpp
src/Lexer/: Lexer.cpp  Lexer.hpp
src/Semantics/: SemanticTypes.hpp  Semantics.cpp  Semantics.hpp
src/SyntaxParser/: SyntaxParser.cpp  SyntaxParser.hpp
test/: if.m8
test/e2e/: add_three_inputs.m8  add_two_inputs.m8  double_print.m8  echo_input.m8  flag_zero.m8  input_plus_five.m8  literal_output.m8  nested_function_increment.m8  print_pair.m8  string_echo.m8  string_echo.out  string_literal_print.m8  struct_literals.m8  struct_member_calls.m8  template_chooser.m8  template_identity.m8  template_identity.out
test/fail/: assign_missing_rhs.m8  double_separator.m8  else_alone.m8  function_missing_body.m8  function_missing_param_type.m8  if.m8  if_missing_consequent.m8  missing_stmt_separator.m8  paren_unclosed.m8  struct_method_missing_body.m8  struct_method_missing_param_type.m8  struct_missing_field_type.m8
test/pass/: compound_assign.m8  decl_types.m8  if_else_only.m8  if_then_assign_else_return.m8  logical_operators.m8  m8.m8  parentheses_prec.m8  test_declarations.m8  test_function_if_zero.m8  test_function_triple.m8  test_struct_flag_methods.m8  test_struct_math_ops.m8  unary.m8
